k8s/order-processing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-processing
spec:
  selector:
    app: order-processing
  ports:
    - port: 8083
      name: web
