k8s/order-processing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-processing
  labels:
    name: order-processing
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: '/order-processing'
            backend:
              service:
                name: order-processing
                port:
                  number: 8083
